<resources>
    <string name="app_name">gutiCoffeShop</string>
    <string name="registrate">REGISTRATE</string>
    <string name="iniciar_sesi_n">INICIAR SESIÓN</string>
    <string name="nombre">Nombre:</string>
    <string name="contrase_a">Contraseña:</string>
    <string name="logocafeteria">logoCafeteria</string>
    <string name="correo">Correo:</string>
    <string name="confirmar_contrase_a">Confirmar Contraseña:</string>
    <string name="no_tengo_cuenta">NO TENGO CUENTA</string>
    <string name="entrar">ENTRAR</string>
    <string name="crear">CREAR</string>
    <string name="ya_tengo_cuenta">YA TENGO CUENTA</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="faqs">FAQS</string>
    <string name="inici">Inici</string>
    <string name="title_activity_fragments_activities">fragments_activities</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="order_here">ORDER HERE</string>
    <string name="guti_coffe_shop">Guti Coffe Shop</string>
    <string name="las_pastas_mas_apetecibles_a_cualquier_hora_del_dia">Las pastas mas apetecibles a cualquier hora del dia</string>
    <string name="gran_variedad_de_bebidas_al_mejor_precio">Gran variedad de bebidas al mejor precio</string>
    <string name="tenemos_el_caf_con_la_mejor_calidad_de_la_peninsula">Tenemos el café con la mejor calidad de la peninsula</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <string name="menjar">MENJAR</string>
    <string name="begudes">BEGUDES</string>
    <string name="cafe">CAFES</string>
    <string name="total">TOTAL:</string>
    <string name="carrito">CARRITO</string>
    <string name="_2">2</string>
    <string name="caf_sol">Café Sol</string>
    <string name="euro">€</string>
    <string name="todo4">TODO</string>
    <string name="efectuar_pago">EFECTUAR PAGO</string>
    <string name="carrito_de_compra">CARRITO DE COMPRA</string>
    <string name="si_tenemos_una_gama_de_productos_apto_para_veganos">Si, tenemos una gama de productos apto para veganos</string>
    <string name="preguntas_frecuentes">PREGUNTAS FRECUENTES</string>
    <string name="disponeis_de_productos_para_veganos">¿Disponeis de productos para veganos?</string>
    <string name="haceis_entregas_a_domicilio">¿Haceis entregas a domicilio?</string>
    <string name="actualmente_no_estamos_trabajando_en_ello">Actualmente no, estamos trabajando en ello</string>
    <string name="habr_n_ofertas_para_fechas_se_aladas">¿Habrán ofertas para fechas señaladas?</string>
    <string name="si_como_cada_a_o_hacemos_descuentos_en_festividades">Si, como cada año hacemos descuentos en festividades</string>
    <string name="organiz_is_eventos_c_terings">¿Organizáis eventos/cáterings?</string>
    <string name="si_se_pueden_encargar_nuestros_productos_con_al_menos_48h_de_antelaci_n">Si, se pueden encargar nuestros productos con al menos 48h de antelación</string>
</resources>