<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bgcafeteria75">

        <FrameLayout
            android:id="@+id/fragmentIni"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".FragmentIni">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:id="@+id/button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_here"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.934" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guti_coffe_shop"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.083" />

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:contentDescription="@string/todo3"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.881"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.442"
                    app:srcCompat="@drawable/desayunos" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:contentDescription="@string/todo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.072"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    app:layout_constraintVertical_bias="0.002"
                    app:srcCompat="@drawable/refrescos" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="150dp"
                    android:text="@string/gran_variedad_de_bebidas_al_mejor_precio"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/imageView2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.363"
                    app:layout_constraintStart_toEndOf="@+id/imageView"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.683" />

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:text="@string/las_pastas_mas_apetecibles_a_cualquier_hora_del_dia"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toTopOf="@+id/imageView3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.539" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="100dp"
                    android:text="@string/tenemos_el_caf_con_la_mejor_calidad_de_la_peninsula"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.363"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/imageView2"
                    app:layout_constraintVertical_bias="0.227" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="175dp"
                    android:layout_height="175dp"
                    android:contentDescription="@string/todo2"
                    app:layout_constraintBottom_toTopOf="@+id/button"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.072"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView"
                    app:layout_constraintVertical_bias="0.785"
                    app:srcCompat="@drawable/cafes" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </FrameLayout>
</layout>





